--- a/src/index.css
+++ b/src/index.css
@@ -30,8 +30,8 @@ a:hover {
 
 .circleContainer {
   position: absolute;
-  top: 215px;
-  right: 65px;
+  top: 90px;
+  right: 80px;
   height: 125px;
   width: 125px;
 }
@@ -75,6 +75,14 @@ a:hover {
   top: 20px;
 }
 
+.logo {
+  position: absolute;
+  width: 12%;
+  height: auto;
+  left: 80px;
+  top: 18px;
+}
+
 .newsContainer {
   display: flex;
   flex-wrap: nowrap;
@@ -84,7 +92,7 @@ a:hover {
 }
 
 #news {
-  margin-top: 70px;
+  margin-top: 60px;
   margin-left: 70px;
   margin-right: 70px;
   padding: 10px;
@@ -114,6 +122,30 @@ a:hover {
   background-color: rgb(255, 255, 255, 0.1);
 }
 
+.searchCard {
+  cursor: pointer;
+  width: 205px;
+  height: 350px;
+  word-wrap: break-word;
+  margin: 30px;
+}
+
+.searchContainer {
+  display: flex;
+  flex-wrap: wrap;
+  margin: 15px;
+}
+
+#search {
+  margin-top: 60px;
+  margin-bottom: 20px;
+  margin-left: 70px;
+  margin-right: 70px;
+  padding: 10px;
+  border-radius: 25px;
+  background-color: rgb(255, 255, 255, 0.1);
+}
+
 .coverImg {
   height: 400px;
   width: 300px;
@@ -121,23 +153,47 @@ a:hover {
   margin-right: 15px;
 }
 
+.searchImg {
+  height: 300px;
+  width: 205px;
+  display: block;
+  margin: 0 auto;
+  padding-top: 10px;
+}
+
+.searchTitle {
+  color: white;
+  text-align: center;
+  font-size: 16px;
+  padding-bottom: 60px;
+}
+
 .gameImg {
-  position: absolute;
-  left: 150px;
-  top: 80px;
+  padding-top: 10px;
+}
+
+.gameContainer {
+  display: flex;
+  flex-wrap: wrap;
+  margin: 10px;
 }
 
 .gameInfo {
-  position: absolute;
-  border-radius: 25px;
-  right: 50px;
-  top: 200px;
-  padding: 20px;
-  width: 1000px;
-  height: 500px;
+  width: 1070px;
+  padding-left: 20px;
   color: white;
+}
+
+#game {
+  margin-top: 60px;
+  margin-bottom: 20px;
+  margin-left: 70px;
+  margin-right: 70px;
+  padding: 10px;
+  border-radius: 25px;
   background-color: rgb(255, 255, 255, 0.1);
 }
+
 
 .bm-burger-button {
   position: fixed;
