--- a/src/index.css
+++ b/src/index.css
@@ -23,6 +23,31 @@ a:hover {
   cursor:pointer;
 }
 
+.modal {
+  position: absolute;
+  overflow-y: scroll;
+  flex-wrap: wrap;
+  display: flex;
+  top: 80px;
+  left: 260px;
+  right: 260px;
+  bottom: 90px;
+  background-color: rgb(87, 141, 229);
+  border-radius: 25px;
+}
+
+.modalButton {
+  position: absolute;
+  height: 25px;
+  width: 25px;
+  right: 5px;
+  top: 10px;
+}
+
+.overlay {
+  background-color: black;
+}
+
 .circle {
   height: 125px;
   width: 125px;
@@ -92,7 +117,7 @@ a:hover {
 }
 
 #news {
-  margin-top: 60px;
+  margin-top: 80px;
   margin-left: 70px;
   margin-right: 70px;
   padding: 10px;
@@ -137,7 +162,23 @@ a:hover {
 }
 
 #search {
-  margin-top: 60px;
+  margin-top: 80px;
+  margin-bottom: 20px;
+  margin-left: 70px;
+  margin-right: 70px;
+  padding: 10px;
+  border-radius: 25px;
+  background-color: rgb(255, 255, 255, 0.1);
+}
+
+.listContainer {
+  display: flex;
+  flex-wrap: wrap;
+  margin: 15px;
+}
+
+#list {
+  margin-top: 80px;
   margin-bottom: 20px;
   margin-left: 70px;
   margin-right: 70px;
@@ -168,6 +209,60 @@ a:hover {
   padding-bottom: 60px;
 }
 
+.listAdd {
+  margin: 15px;
+  margin-top: 100px;
+  margin-right: 25px;
+  height: 700px;
+  width: 600px;
+  overflow-y: scroll;
+}
+
+.listSearchContainer {
+  margin: 15px;
+  margin-top: 100px;
+  height: 700px;
+  width: 600px;
+  overflow-y: scroll;
+}
+
+.listSearchCard {
+  cursor: pointer;
+  width: 500px;
+  height: 105px;
+  display: flex;
+  flex-wrap: wrap;
+  word-wrap: break-word;
+  margin: 30px;
+}
+
+.listSearchImg {
+  height: 100px;
+  width: 100px;
+  display: block;
+  margin: 0 auto;
+  padding-top: 10px;
+}
+
+.listSearchBar {
+  position: absolute;
+  right: 390px;
+  top: 25px;
+}
+
+.listSearchTitle {
+  color: white;
+  width: 300px;
+  margin-left: 20px;
+  margin-top: 30px;
+}
+
+.newListForm {
+  position: absolute;
+  top: 25px;
+  left: 25px;
+}
+
 .gameImg {
   padding-top: 10px;
 }
@@ -185,7 +280,7 @@ a:hover {
 }
 
 #game {
-  margin-top: 60px;
+  margin-top: 80px;
   margin-bottom: 20px;
   margin-left: 70px;
   margin-right: 70px;
@@ -193,7 +288,6 @@ a:hover {
   border-radius: 25px;
   background-color: rgb(255, 255, 255, 0.1);
 }
-
 
 .bm-burger-button {
   position: fixed;
@@ -227,13 +321,14 @@ a:hover {
 .bm-menu-wrap {
   position: fixed;
   height: 100%;
+  top: 0;
 }
 
 /* General sidebar styles */
 .bm-menu {
   background: rgb(0, 0, 0, 0.8);
   padding: 2.5em 1.5em 0;
-  font-size: 2em;
+  font-size: 1.6em;
 }
 
 /* Morph shape necessary with bubble or elastic */
