pretty much done

--- a/src/index.css
+++ b/src/index.css
@@ -148,7 +148,6 @@ a:hover {
 
 .popularCard {
   cursor: pointer;
-  word-wrap: break-word;
 }
 
 #popular {
@@ -159,6 +158,28 @@ a:hover {
   padding: 10px;
   border-radius: 25px;
   background-color: rgb(255, 255, 255, 0.1);
+}
+
+#screenshot {
+  margin-top: 20px;
+  margin-bottom: 20px;
+  margin-left: 70px;
+  margin-right: 70px;
+  padding: 10px;
+  border-radius: 25px;
+  background-color: rgb(255, 255, 255, 0.1);
+}
+
+.screenshotContainer {
+  display: flex;
+  flex-wrap: nowrap;
+  overflow-x: auto;
+  margin: 15px;
+}
+
+.screenshotCard {
+  cursor: pointer;
+  margin: 10px
 }
 
 .searchCard {
@@ -250,6 +271,7 @@ a:hover {
 }
 
 .listGameCard {
+  cursor: pointer;
   width: 435px;
   height: 105px;
   display: flex;
